--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/coupons2.0?createDatabaseIfNot
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.main.banner-mode=OFF
-spring.jpa.hibernate.ddl-auto=update
-#logging.level.root=off
+spring.jpa.hibernate.ddl-auto=create
+#logging.level.com.example=DEBUG
+#logging.level.org.springframework=DEBUG
+#spring.main.banner-mode=OFF
+logging.level.root=off
